--- a/example/index.html
+++ b/example/index.html
@@ -3,9 +3,9 @@
 <head>
 </head>
 <body>
-    <a href="#page/1">One</a>
-    <a href="#page/two">Two</a>
-    <a href="#page/three">Three</a>
+    <a href="#/page/1">One</a>
+    <a href="#/page/two">Two</a>
+    <a href="#/page/three">Three</a>
 
     <span id="content"></span>
     <script src="../src/index.js"></script>
